--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "uuid"] }
-reqwest = { version = "0.11", features = ["json"] }
+sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "uuid", "time"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.11.0", features = ["v4"] }
 log = { version = "0.4" }
-formatted_logger = { version = "0.1.1" }
+formatted_logger = { version = "0.3.0" }
+async-trait = "0.1.86"
